# cuttle-lang

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  cuttle-lang.project
scripts/: get-deps.sh
src/: CMakeLists.txt  cutvm_context.cpp  cutvm_context.hpp  cutvm_generator.cpp  cutvm_generator.hpp  cutvm_tokenizer.cpp  cutvm_tokenizer.hpp  cutvm_translator.cpp  cutvm_translator.hpp  cutvm_type_utils.cpp  cutvm_type_utils.hpp  lang_config.hpp  lang_config_cutc_parser.cpp  lang_config_cutc_parser.hpp  lang_cutvm_translator.cpp  lang_cutvm_translator.hpp  lang_generator_arg_cutc_parser.cpp  lang_generator_arg_cutc_parser.hpp  lang_generator_arg_cutvm_functions.cpp  lang_generator_arg_cutvm_functions.hpp  lang_generator_cutc_parser.cpp  lang_generator_cutc_parser.hpp  lang_generator_cutvm_functions.cpp  lang_generator_cutvm_functions.hpp  lang_generator_cutvm_translator.cpp  lang_generator_cutvm_translator.hpp  lang_generator_func_cutc_parser.cpp  lang_generator_func_cutc_parser.hpp  lang_generator_func_cutvm_functions.cpp  lang_generator_func_cutvm_functions.hpp  lang_macro_functions_parser.cpp  lang_macro_functions_parser.hpp  lang_output_translator.cpp  lang_output_translator.hpp  lang_parser_base.cpp  lang_parser_base.hpp  lang_parser_cutc.cpp  lang_parser_cutc_parser.cpp  lang_parser_cutc_parser.hpp  lang_parser_cutc_tokenizer.cpp  (+12 more)
tests/: CMakeLists.txt  main.cpp  test_cutvm_generator.cpp  test_cutvm_translator.cpp  test_lang_cutvm_translator.cpp  test_lang_generator_cutvm_translator.cpp  test_lang_parser_cutc_parser.cpp  test_lang_parser_cutvm_functions.cpp  test_lang_parser_cutvm_translator.cpp  test_lang_parser_math.cpp  test_lang_tokenizer.cpp  test_lang_tokenizer.hpp  test_lang_tokenizer_cutvm_functions.cpp  test_manager.cpp
tests/cuttle-test/src/: main.cpp  measure.hpp  test.hpp
